--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
         .sticky-header {
             position: sticky;
             top: 0;
-            background-color: #f9f9f9; /* Light background color */
+            background-color: #1a1a1a; /* Dark background similar to company theme */
+            color: #f2f2f2;
             z-index: 1000;
             padding: 10px;
-            border-bottom: 1px solid #ddd;
+            border-bottom: 2px solid #00b0ff; /* Light blue border */
         }
         h1 {
             margin: 0;
             padding: 0;
             font-size: 1.8em;
+            color: #00b0ff; /* Light blue color */
         }
         .navbar {
-            background-color: #333;
+            background-color: #1a1a1a; /* Dark background */
             overflow: hidden;
             margin-top: 10px;
         }
@@ -37,8 +39,8 @@
             font-size: 17px;
         }
         .navbar a:hover, .navbar a.active-tab {
-            background-color: #ddd;
-            color: black;
+            background-color: #00b0ff; /* Light blue on hover and active */
+            color: white;
         }
         .tab-content {
             display: none;
@@ -53,6 +55,7 @@
             margin-bottom: 20px;
             display: flex;
             align-items: flex-start;
+            background-color: #f9f9f9; /* Light gray background for city containers */
         }
         .city-info {
             flex: 1;
@@ -62,6 +65,7 @@
         .city-title {
             font-size: 1.5em;
             margin-bottom: 15px;
+            color: #1a1a1a;
         }
         .city-info div {
             margin-bottom: 12px;
@@ -74,6 +78,13 @@
             padding: 10px 20px;
             font-size: 1em;
             cursor: pointer;
+            background-color: #00b0ff; /* Light blue button */
+            color: white;
+            border: none;
+            margin-top: 20px;
+        }
+        #load-more:hover {
+            background-color: #007bbf; /* Darker blue on hover */
         }
     </style>
 </head>
@@ -81,11 +92,11 @@
     <div class="sticky-header">
         <h1>Smart City Mobility Solutions</h1>
         <div class="navbar">
-            <a href="#" class="tab-link active-tab" onclick="openTab(event, 'histogram')">Istogrammi</a>
-            <a href="#" class="tab-link" onclick="openTab(event, 'comparison')">Comparison</a>
-            <a href="#" class="tab-link">Void</a>
-            <a href="#" class="tab-link">Void</a>
-            <a href="#" class="tab-link">Void</a>
+            <a href="javascript:void(0)" class="tab-link active-tab" onclick="openTab(event, 'histogram')">Istogrammi</a>
+            <a href="javascript:void(0)" class="tab-link" onclick="openTab(event, 'comparison')">Comparison</a>
+            <a href="javascript:void(0)" class="tab-link">Void</a>
+            <a href="javascript:void(0)" class="tab-link">Void</a>
+            <a href="javascript:void(0)" class="tab-link">Void</a>
         </div>
     </div>
 
@@ -103,17 +114,14 @@
 
     <script>
         function openTab(event, tabName) {
-            // Hide all tab contents
             const tabContents = document.getElementsByClassName("tab-content");
             for (let content of tabContents) {
                 content.classList.remove("active-content");
             }
-            // Remove active class from all tab links
             const tabLinks = document.getElementsByClassName("tab-link");
             for (let link of tabLinks) {
                 link.classList.remove("active-tab");
             }
-            // Show the selected tab content and make the link active
             document.getElementById(tabName).classList.add("active-content");
             event.currentTarget.classList.add("active-tab");
         }
@@ -234,7 +242,7 @@
                     scales: {
                         x: {
                             ticks: {
-                                maxRotation: 90,
+							                                maxRotation: 90,
                                 minRotation: 90,
                                 font: {
                                     size: 10
@@ -261,3 +269,5 @@
     </script>
 </body>
 </html>
+
+                               
