--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </head>
 <body>
    <div class="sticky-header">
-    <img src="images/logo.png" alt="Company Logo" class="logo">
+    <img src="logo.png" alt="Company Logo" class="logo">
     <h1>Smart City Mobility Solutions</h1>
     <div class="navbar">
         <a href="#" class="tab-link active-tab" onclick="openTab(event, 'histogram')">Istogrammi</a>
