--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         .logo {
             width: 50px;
-            height: auto;
+            height: 50px;
         }
         h1 {
             margin: 0;
