--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="navbar">
             <a href="#" class="tab-link active-tab" onclick="openTab(event, 'Histograms')">Histograms</a>
-            <a href="#" class="tab-link" onclick="openTab(event, 'CitiesInNumbers')">CitiesInNumbers</a>
+            <a href="#" class="tab-link" onclick="openTab(event, 'Cities Comparison')">Cities Comparison</a>
             <a href="#" class="tab-link">Void</a>
             <a href="#" class="tab-link">Void</a>
             <a href="#" class="tab-link">Void</a>
@@ -118,7 +118,7 @@
     </div>
 
     
-    <div id="CitiesInNumbers" class="tab-content">
+    <div id="Cities Comparison" class="tab-content">
         <div class="container">
         <h2>Comparison Between Cities - Mobility Solutions</h2>
             <h3>Global Comparison of Mobility Solutions</h3>
