--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
         <h2>Comparison Between Cities - Mobility Solutions</h2>
         <h3>Select Cities to Compare:</h3>
         <div id="city-selection"></div>
+             <form id="city-form">
+               </form>
         <button onclick="updateCharts()">Update Charts</button>
         
         <!-- Grafici -->
