--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="cityData_full_with_country_codes.js"></script>
     
    <script>
     let cityDataForComparison = [];
