--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="cityData_full_with_country_codes.js"></script>
+<script src="cityData_full_with_country_codes.json"></script>
     
    <script>
     let cityDataForComparison = [];
@@ -142,7 +142,7 @@
     // Funzione per caricare i dati dal file JSON
     async function loadCityData() {
         try {
-            const response = await fetch('cityData_full_with_country_codes.js'); // Sostituisci con il percorso corretto
+            const response = await fetch('cityData_full_with_country_codes.json'); // Sostituisci con il percorso corretto
             if (!response.ok) throw new Error("Errore nel caricamento dei dati");
             
             cityDataForComparison = await response.json();
